--- a/client/app/views/escuelas/params-procesos.html
+++ b/client/app/views/escuelas/params-procesos.html
@@ -9,15 +9,25 @@
       <md-progress-linear md-mode="indeterminate" ng-if="UI.refresh"></md-progress-linear>
 
       <md-tabs md-dynamic-height md-border-bottom>
-            <md-tab label="Parametros por Periodo">
+            <md-tab label="Parametros por Escuela">
               <md-content flex class="md-padding page-content md-whiteframe-4dp" style="max-width:1020px;">
                 <div  flex-container="row" flex-gutter="24">
                   <div flex-item>
                     <md-input-container class="md-block">
-                      <label>Periodos</label>
-                      <md-select ng-model="filter._periodo" ng-model-options="{trackBy: '$value._id'}" >
-                        <md-option ng-repeat="per in periodos" ng-value="per">
-                          {{per.nombre}}
+                      <label>Facultad</label>
+                      <md-select ng-model="filter._facultad" ng-model-options="{trackBy: '$value._id'}" ng-change="LoadEcuelas()">
+                        <md-option ng-repeat="fac in facultades" ng-value="fac">
+                          {{fac.nombre}}
+                        </md-option>
+                      </md-select>
+                    </md-input-container>
+                  </div>
+                  <div flex-item>
+                    <md-input-container class="md-block">
+                      <label>Escuela</label>
+                      <md-select ng-model="filter._escuela" ng-model-options="{trackBy: '$value._id'}" ng-change="ListPlanEstudios()">
+                        <md-option ng-repeat="escuela in escuelas" ng-value="escuela">
+                          {{escuela.nombre}}
                         </md-option>
                       </md-select>
                     </md-input-container>
@@ -54,9 +64,9 @@
                 </div>
               </md-content>
             </md-tab>
-            <md-tab label="Procesos por Periodo">
+            <md-tab label="Procesos por Escuela">
               <md-content class="md-padding">
-                <h1 class="md-display-2">Procesos por Periodo</h1>
+                <h1 class="md-display-2">Procesos por Escuela</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis ante augue. Phasellus volutpat neque ac dui mattis vulputate. Etiam consequat aliquam cursus. In sodales pretium ultrices. Maecenas lectus est, sollicitudin consectetur felis nec, feugiat ultricies mi. Aliquam erat volutpat. Nam placerat, tortor in ultrices porttitor, orci enim rutrum enim, vel tempor sapien arcu a tellus. Vivamus convallis sodales ante varius gravida. Curabitur a purus vel augue ultrices ultricies id a nisl. Nullam malesuada consequat diam, a facilisis tortor volutpat et. Sed urna dolor, aliquet vitae posuere vulputate, euismod ac lorem. Sed felis risus, pulvinar at interdum quis, vehicula sed odio. Phasellus in enim venenatis, iaculis tortor eu, bibendum ante. Donec ac tellus dictum neque volutpat blandit. Praesent efficitur faucibus risus, ac auctor purus porttitor vitae. Phasellus ornare dui nec orci posuere, nec luctus mauris semper.</p>
                 <p>Morbi viverra, ante vel aliquet tincidunt, leo dolor pharetra quam, at semper massa orci nec magna. Donec posuere nec sapien sed laoreet. Etiam cursus nunc in condimentum facilisis. Etiam in tempor tortor. Vivamus faucibus egestas enim, at convallis diam pulvinar vel. Cras ac orci eget nisi maximus cursus. Nunc urna libero, viverra sit amet nisl at, hendrerit tempor turpis. Maecenas facilisis convallis mi vel tempor. Nullam vitae nunc leo. Cras sed nisl consectetur, rhoncus sapien sit amet, tempus sapien.</p>
                 <p>Integer turpis erat, porttitor vitae mi faucibus, laoreet interdum tellus. Curabitur posuere molestie dictum. Morbi eget congue risus, quis rhoncus quam. Suspendisse vitae hendrerit erat, at posuere mi. Cras eu fermentum nunc. Sed id ante eu orci commodo volutpat non ac est. Praesent ligula diam, congue eu enim scelerisque, finibus commodo lectus.</p>
