--- a/client/app/views/alumno/misdatos.html
+++ b/client/app/views/alumno/misdatos.html
@@ -20,7 +20,7 @@
                       <md-input-container class="md-icon-float md-block">
                         <label>DNI:</label>
                         <md-icon md-font-icon="fa-credit-card" class="fa s24 md-primary md-hue-1"></md-icon>
-                        <input required name="documento" ng-model="model.documento">
+                        <input required name="documento" ng-model="model.documento" ng-readonly="!editable">
                         <div ng-messages="myForm.documento.$error" ng-if="submited">
                           <div ng-message="required">{{message.Required}}</div>
                         </div>
@@ -32,7 +32,7 @@
                       <md-input-container class="md-icon-float md-block">
                         <label>Nombres</label>
                         <md-icon md-font-icon="fa-user" class="fa s24 md-primary md-hue-1"></md-icon>
-                        <input required name="nombres" ng-model="model.nombres">
+                        <input required name="nombres" ng-model="model.nombres" ng-readonly="!editable">
                         <div ng-messages="myForm.nombres.$error" ng-if="submited">
                           <div ng-message="required">{{message.Required}}</div>
                       </md-input-container>
@@ -44,7 +44,7 @@
                       <md-input-container class="md-icon-float md-block">
                         <label>Apellidos</label>
                         <md-icon md-font-icon="fa-user" class="fa s24 md-primary md-hue-1"></md-icon>
-                        <input required name="apellidos" ng-model="model.apellidos">
+                        <input required name="apellidos" ng-model="model.apellidos" ng-readonly="!editable">
                         <div ng-messages="myForm.apellidos.$error" ng-if="submited">
                           <div ng-message="required">{{message.Required}}</div>
                         </div>
@@ -56,7 +56,7 @@
                       <md-input-container class="md-block">
                         <label>Sexo</label>
                         <!--md-icon md-font-icon="fa-user" class="fa s24 md-primary md-hue-1"></md-icon-->
-                        <md-select ng-model="model.sexo" name="sexo" required>
+                        <md-select ng-model="model.sexo" name="sexo" required ng-disabled="!editable">
                           <md-option ng-repeat="sex in sexo" ng-value="sex">
                             {{sex}}
                           </md-option>
@@ -69,10 +69,10 @@
               </div>
               <div flex layout="row">
                   <div flex>
-                      <md-input-container class="md-block">                        
+                      <md-input-container class="md-block">
                         <!--input required name="fechaNacimiento" ng-model="model.fechaNacimiento"-->
                         <!--md-icon md-font-icon="fa-calendar" class="fa s24 md-primary md-hue-1"></md-icon-->
-                        <md-datepicker required name="fechaNacimiento" ng-model="model.fechaNacimiento" md-placeholder="Fecha de Nacimiento"></md-datepicker>
+                        <md-datepicker required name="fechaNacimiento" ng-model="model.fechaNacimiento" md-placeholder="Fecha de Nacimiento" ng-disabled="!editable"></md-datepicker>
                         <div ng-messages="myForm.fechaNacimiento.$error" ng-if="submited">
                           <div ng-message="required">{{message.Required}}</div>
                         </div>
@@ -84,7 +84,7 @@
                       <md-input-container class="md-icon-float md-block">
                         <label>Lugar de Nacimiento</label>
                         <md-icon md-font-icon="fa-map-marker" class="fa s24 md-primary md-hue-1"></md-icon>
-                        <input required name="lugarNacimiento" ng-model="model.lugarNacimiento">
+                        <input required name="lugarNacimiento" ng-model="model.lugarNacimiento" ng-readonly="!editable">
                         <div ng-messages="myForm.lugarNacimiento.$error" ng-if="submited">
                           <div ng-message="required">{{message.Required}}</div>
                         </div>
@@ -111,7 +111,7 @@
                         <label>E-mail:</label>
                         <!--md-icon md-svg-src="img/icons/ic_email_24px.svg" class="email"></md-icon-->
                         <md-icon md-font-icon="fa-envelope" class="fa s24 md-primary md-hue-1"></md-icon>
-                        <input required name="email" ng-model="model.email">
+                        <input required name="email" ng-model="model.email" ng-readonly="!editable">
                         <div ng-messages="myForm.email.$error" ng-if="submited">
                           <div ng-message="required">{{message.Required}}</div>
                         </div>
@@ -123,7 +123,7 @@
                       <md-input-container class="md-icon-float md-block">
                         <label>Teléfono:</label>
                         <md-icon md-font-icon="fa-mobile" class="fa s24 md-primary md-hue-1"></md-icon>
-                        <input required name="telefono" ng-model="model.telefono">
+                        <input required name="telefono" ng-model="model.telefono" ng-readonly="!editable">
                         <div ng-messages="myForm.telefono.$error" ng-if="submited">
                           <div ng-message="required">{{message.Required}}</div>
                         </div>
@@ -135,7 +135,7 @@
                       <md-input-container class="md-icon-float md-block">
                         <label>Dirección</label>
                         <md-icon md-font-icon="fa-map-marker" class="fa s24 md-primary md-hue-1"></md-icon>
-                        <input required name="direccion" ng-model="model.direccion">
+                        <input required name="direccion" ng-model="model.direccion" ng-readonly="!editable">
                         <div ng-messages="myForm.direccion.$error" ng-if="submited">
                           <div ng-message="required">{{message.Required}}</div>
                         </div>
